# trinci-db-explorer

./: Cargo.toml  README.md  watch.sh
data/: contributors.json
db/: IDENTITY  LOG  MANIFEST-000004  OPTIONS-000025  OPTIONS-000027
src/: main.rs
src/services/: contributors.rs  mod.rs
src/tabs/home/: mod.rs
trinci-db-explorer/: Cargo.toml
trinci-db-explorer/src/: main.rs
