[package]
name = "trinci-db-explorer"
version = "0.1.0"
edition = "2021"
authors = ["The Trinci Team <trinci@affidaty.io>"]
description = "TRINCI database explorer"
keywords = ["trinci", "blockchain", "explorer", "rocksdb", "tui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TUI dependencies
tui = { version = "0.17", default-features = false, features = ['crossterm', 'serde'] }
crossterm = "0.23"
# RocksDB dependencies
merkledb = { git = "https://github.com/affidaty-blockchain/merkledb", default-features = false, features = [
    "rocksdb_snappy",
    "sodiumoxide-crypto",
], optional = true }
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.4", default-features = false, features = ["std"] }
thiserror = "1.0"
